[package]
name = "telegram-raf"
version = "0.1.0"
description = "RaF (Refer a Friend): bot for creating referral-based contests for your Telegram channels, groups and supergroups"
readme = "README.md"
authors = ["Paolo Galeone <nessuno@nerdz.eu>"]
edition = "2018"
default-run = "raf"
repository = "https://github.com/galeone/raf"
license = "Apache-2.0"
keywords = ["telegram", "bot", "referral"]
categories = ["command-line-utilities"]

[dependencies]
chrono = "0.4.19"
data-encoding = "2.3.2"
default = "0.1.2"
hyper = "0.14.18"
hyper-tls = "0.5.0"
log = "0.4.16"
r2d2 = "0.8.9"
r2d2_sqlite = "0.20.0"
regex = "1.5.5"
simple_logger = "2.1.0"
tabular = "0.2.0"
typemap = "0.3.3"
url = "2.2.2"
telexide-fork = "0.2.1"

[dependencies.rusqlite]
features = ["chrono"]
version = "0.27.0"

[dependencies.tokio]
features = ["full"]
version = "1.18.0"
